[package]
name = "gdfm"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.5.33"
color-eyre = "0.6.3"
console = "0.15.11"
dialoguer = "0.11.0"
dirs = "6.0.0"
indicatif = "0.17.11"
miette = { version = "7.5.0", features = ["fancy"] }
octocrab = "0.44.0"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "macros", "sqlite"] }
thiserror = "2.0.12"
tokio = { version = "1", features = ["full"] }
